Updated version to working form

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qtf-renderer",
   "author": "Sagadark6",
   "license": "MIT",
-  "version": "0.16.9",
+  "version": "0.17.61",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "A library for generating dynamic work trays and forms using React, TypeScript, Apollo, and GraphQL.",
@@ -47,5 +47,8 @@
     "forms",
     "dynamic",
     "renderer"
-  ]
+  ],
+  "dependencies": {
+    "react-tabs": "^6.0.2"
+  }
 }
