--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,13 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "esnext",                // Keep this as esnext for Webpack compatibility
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "declaration": true,           // Generate .d.ts files for TypeScript definitions
-    "declarationMap": true,        // Generate source maps for .d.ts files
-    "outDir": "./dist",            // Output directory for compiled files
+    "declaration": true,               // Generate .d.ts files for TypeScript definitions
+    "declarationMap": true,            // Generate source maps for .d.ts files
+    "outDir": "./dist",                // Output directory for compiled files
     "jsx": "react-jsx"
   },
   "include": [
