--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qtf-renderer",
   "author": "Sagadark6",
   "license": "MIT",
-  "version": "0.17.149",
+  "version": "0.17.156",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "A library for generating dynamic work trays and forms using React, TypeScript, Apollo, and GraphQL.",
@@ -38,7 +38,7 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "tsc && node copy-css.js",
     "prepublishOnly": "npm run build"
   },
   "repository": {
